--- a/ProductMVC/Views/Product/ProductEdit.cshtml
+++ b/ProductMVC/Views/Product/ProductEdit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "ProductEdit";
 }
 
-<h2>ProductEdit</h2>
+<h2>Izmena proizvoda</h2>
 
 
 @using (Html.BeginForm("EditPost", "Product", FormMethod.Post))
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Product</h4>
+        <h4>Proizvod</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
@@ -66,14 +66,14 @@
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Sačuvaj" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Nazad na listu", "Index")
 </div>
 
 @section Scripts {
